[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/Fonts/ui_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/menuObjects/PopupMenus/drop_quantity_popup.gd" type="Script" id=2]

[node name="Popup" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 10.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_right = 200.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "How many do you want to drop?"
align = 1
valign = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_right = 5.0
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 9.0
margin_right = 144.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 2
max_length = 5
caret_blink = true
caret_blink_speed = 0.5

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 148.0
margin_right = 191.0
margin_bottom = 24.0
text = "Drop"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 195.0
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 5, 0 )
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 54.0
rect_min_size = Vector2( 5, 0 )

[node name="IncorrectQuantity" type="AcceptDialog" parent="."]
margin_right = 200.0
margin_bottom = 60.0
dialog_text = "Incorrect quantity entered"
dialog_autowrap = true

[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="confirmed" from="IncorrectQuantity" to="." method="_on_IncorrectQuantity_confirmed"]
